# llm-cursor

./: Makefile  README.md  conventions.md  pyproject.toml
doc/: product_idea.md  tasklist.md  vision.md  workflow.md
src/llm_cursor/: __init__.py  app.py  cli.py
src/llm_cursor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_app.py
